#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package SConsTools
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-10-01
2014-08-17 Igor Gaponenko
- adding support for RHEL7 and GCC 4.8

Tag: V00-09-15
2014-04-01 Igor Gaponenko
- upgraded Qt4 from 4.6.2 to 4.8.5

Tag: V00-09-14
2013-12-16 Andy Salnikov
- doc target: remove target directroy, always re-run generators event if 
  directories are already there

Tag: V00-09-13
2013-09-19 Andy Salnikov
- adding one more doc generator for all python modules/packages (pydoc-all)
- by default all packages that produce python modules add themselves to
  this generator, can be changed with DOCGEN in SConscript as usual

Tag: V00-09-12
2013-09-17 Andy Salnikov
- change how doc target works, packages now decide for themselves to which
  document generator they want to be added (through DOCGEN parameter)
- default env now has 'DOC_TARGETS' key which points to a dictionary
  mapping generator name to list of files or directories (strings, not
  targets).
- standardSConscript and standardExternalPackage are both modified to update
  env['DOC_TARGETS'] based on the value of DOCGEN passed to them
- default (when DOCGEN is not specified) is for standardSConscript() to add
  its package to env['DOC_TARGETS']['doxy-all'] and for 
  standardExternalPackage() to do nothing

Tag: V00-09-11
2013-08-13 Andy Salnikov
- one more place needed default env instead of package env

Tag: V00-09-10
2013-08-08 Andy Salnikov
- my last commit broke unrelated stuff (Python include path), fixing that now

Tag: V00-09-09
2013-08-08 Andy Salnikov
- dependencies.py: fix LIBPATH for exexcutbales

Tag: V00-09-08
2013-08-07 Andy Salnikov
- remove mentioning of internal targets from scons -h output
