@@ -11,6 +11,12 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-10-02
+2015-07-07 David Schneider
+- scons test unittests, sleep a second to try to fix text file is busy 
+  message. Include output of failed unit tests to make it easier to track
+  down build problems.
+
 Tag: V00-10-01
 2014-08-17 Igor Gaponenko
 - adding support for RHEL7 and GCC 4.8
